<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:id="@+id/progress_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/insert_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_network_signal_blue" />

            <TextView
                android:id="@+id/insert_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/get_default_sub_title"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/insert_sub_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:paddingHorizontal="20dp"
                android:text="@string/q_download_sub_text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progress_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:layout_marginVertical="15dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activate_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_sim_card_alt_24dp_blue" />

            <TextView
                android:id="@+id/activate_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:paddingHorizontal="20dp"
                android:text="@string/result_download_title"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/activate_content"
                style="@style/SudDescription.Glif"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/q_result_download_metadata_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/activate_other_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/use_different_network_button"
                android:textColor="@color/google_blue_600"
                android:textSize="13sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/activate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_btn_blue_bg_44px"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/res_activation_button"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_gray_line" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activate_done_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_sim_card_alt_24dp_blue" />

            <TextView
                android:id="@+id/done_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:paddingHorizontal="20dp"
                android:text="@string/confirm_acti_success_title"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                style="@style/SudDescription.Glif"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/confirm_acti_success_sub_title_no_phone"
                android:textSize="15sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/activate_done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_btn_blue_bg_44px"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/done_button"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_gray_line" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/operation_error" />

                <TextView
                    android:id="@+id/error_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/error_title"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/error_content"
                    style="@style/SudDescription.Glif"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/body_make_sure_not_already_downloaded_no_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/error_detail"
                    style="@style/SudDescription.Glif"
                    android:layout_width="fill_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/body_make_sure_not_already_downloaded_no_name"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/error_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/cancel_button"
                    android:textColor="@color/google_blue_600"
                    android:textSize="13sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/error_done_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/shape_btn_blue_bg_44px"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/done_button"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_gray_line" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activate_failed_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/operation_error" />

                <TextView
                    android:id="@+id/failed_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/failed_title"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/failed_content"
                    style="@style/SudDescription.Glif"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/body_issue_with_sim_profile_no_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/failed_query_eid_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/perm_error_q_sub2_eid"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/failed_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/cancel_button"
                    android:textColor="@color/google_blue_600"
                    android:textSize="13sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/failed_done_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/shape_btn_blue_bg_44px"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/done_button"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_gray_line" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

